--- a/3dgame.html
+++ b/3dgame.html
@@ -49,7 +49,7 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
 
 
 
-			//===END TRACK CODE
+      //===END TRACK CODE
 
       var xFn = function(t) { return 650 * _xFn(t); }
       var zFn = function(t) { return 650 * _yFn(t); }
@@ -69,17 +69,23 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
       }, scene);
 
 
- 		var camera = new BABYLON.ArcRotateCamera("Camera", 0, (3 * Math.PI) / 8, 20, playerSphere, scene);
+    var camera = new BABYLON.ArcRotateCamera("Camera", 0, (3 * Math.PI) / 8, 20, playerSphere, scene);
 
-       	camera.attachControl(canvas, true);
+        camera.attachControl(canvas, true);
 
-       	var light = new BABYLON.HemisphericLight('light1', new BABYLON.Vector3(0, 1, 0), scene);
+        var light = new BABYLON.HemisphericLight('light1', new BABYLON.Vector3(0, 1, 0), scene);
 
 
-        	rampAt(xFn, zFn, 0.07, -Math.PI / 4, scene);
-        wallAt(xFn, zFn, 0.01, -6.1, scene); 
+        rampAt(xFn, zFn, 0.07, -Math.PI / 4, scene);
+        /* OTHER rampAt Code here However many they want*/
 
-       	scene.registerAfterRender(function() {
+        wallAt(xFn, zFn, 0.01,  -6.1, scene);
+        wallAt(xFn, zFn, 0.06,  -6.1, scene);
+        wallAt(xFn, zFn, 0.01,  6.1, scene);
+        wallAt(xFn, zFn, 0.06,  6.1, scene);
+        /* OTHER wallAt Code here However many they want*/
+
+        scene.registerAfterRender(function() {
           var vel = playerSphere.physicsImpostor.getLinearVelocity();
           playerSphere.physicsImpostor.setLinearVelocity(vel.scale(.98));
 
@@ -107,26 +113,26 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
           }
 
           var l = false;
-  	      if (playerSphere.position.y < -10 && l == false) {
-  	        l = true;
-  	        lost();
-  	      }
+          if (playerSphere.position.y < -10 && l == false) {
+            l = true;
+            lost();
+          }
 
           var currentT = tLookup(xFn, zFn, 500, playerSphere.position.x, playerSphere.position.z);
-
-			var angle = (derivAngle(currentT, xFn, zFn) - (Math.PI)); 
-			camera.alpha += (angle - camera.alpha) / 32; 
-
-			if (playerSphere.position.y < -10) {
-			lost();
-			} 
+//NEW CODE
+          var angle = (derivAngle(currentT, xFn, zFn) - (Math.PI));
+          camera.alpha += (angle - camera.alpha) / 32;
+//END NEW CODE
+          if (currentT > 0.99) {
+            win();
+          }
       });
 
       function drawPoint(x, z, zrot, scene) {
         var point = BABYLON.MeshBuilder.CreateBox('point', { 
-        	width: 10, 
-        	height: 0.5, 
-        	depth: 12 
+          width: 10, 
+          height: 0.5, 
+          depth: 12 
         }, scene);
         point.material = new BABYLON.StandardMaterial("pointMaterial", scene);
         point.material.diffuseColor = new BABYLON.Color3(1, 0, 1);
@@ -140,13 +146,7 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
 
       function drawParametric(xFn, zFn, start, end, res, scene) {
         for (var t = start; t <= end; t += ((end - start) / res)) {
-  //REPLACE
-          //drawPoint(xFn(t), zFn(t), 0, scene);
-
           drawPoint(xFn(t), zFn(t), -derivAngle(t, xFn, zFn), scene);
-  //END REPLACE
-
-
         }
       }
 
@@ -165,7 +165,7 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
         }
         return minT;
       }
-//NEW CODE
+
       function derivAngle(t, xFn, zFn) {
         function derive(f, x) {
           var h = 2.2e-10;
@@ -191,23 +191,24 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
         ramp.rotation.z = angle;
         ramp.rotation.y = -derivAngle(t, xFn, zFn);
       }
-      function wallAt(xFn, zFn, t, offset, scene) {
-	var wall = BABYLON.MeshBuilder.CreateBox('wall', {
-		height: 8,
-		width: .25,
-		depth: 12
-	}, scene);
-		angle = -derivAngle(t, xFn, zFn); 
-		wall.material = new BABYLON.StandardMaterial("wallMaterial", scene);
-		wall.material.diffuseColor = new BABYLON.Color3(1, 1, 0);
-		wall.physicsImpostor = new BABYLON.PhysicsImpostor(wall, BABYLON.PhysicsImpostor.BoxImpostor, {
-		mass: 0,
-		restitution: 0.9
-	}, scene);
-		wall.position = new BABYLON.Vector3(xFn(t) + (offset * Math.sin(angle)), 4, zFn(t) + (offset * Math.cos(angle)));
-		wall.rotation.y = angle + (Math.PI / 2);
-	return wall;
-	//END NEW CODE
+  
+  function wallAt(xFn, zFn, t, offset, scene) {
+    var wall = BABYLON.MeshBuilder.CreateBox('wall', {
+      height: 8,
+      width: .25,
+      depth: 12
+    }, scene);
+    angle = -derivAngle(t, xFn, zFn); 
+    wall.material = new BABYLON.StandardMaterial("wallMaterial", scene);
+    wall.material.diffuseColor = new BABYLON.Color3(1, 1, 0);
+    wall.physicsImpostor = new BABYLON.PhysicsImpostor(wall, BABYLON.PhysicsImpostor.BoxImpostor, {
+      mass: 0,
+      restitution: 0.9
+    }, scene);
+    wall.position = new BABYLON.Vector3(xFn(t) + (offset * Math.sin(angle)), 4, zFn(t) + (offset * Math.cos(angle)));
+    wall.rotation.y = angle + (Math.PI / 2);
+    return wall;
+  }
       engine.runRenderLoop(scene.render.bind(scene));
       window.addEventListener('resize', engine.resize.bind(engine));
     }
@@ -219,7 +220,6 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
         window.location.reload();
         alert("You win!");
     }
-    
   </script>
 </head>
 <body onload="start()">
