--- a/3dgame.html
+++ b/3dgame.html
@@ -1,4 +1,4 @@
-
+10 seconds to win the game!
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
@@ -19,6 +19,13 @@
       height: 100%;
       touch-action: none;
     }
+     #timer {
+    position: absolute;
+    left:10px;
+    bottom:10px;
+    color:#ccc;
+    font: 52px sans-serif;
+    } 
   </style>
   <script>
     function start() {
@@ -68,7 +75,35 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
         restitution: 0.9
       }, scene);
 
+        BABYLON.SceneLoader.ImportMesh(null, "resources/", "speed.obj", scene, function(meshes) {
+      var boostMesh = meshes[0], boosts = [];
+        boostMesh.material = new BABYLON.StandardMaterial("boostMaterial", scene);
+        boostMesh.material.diffuseColor = new BABYLON.Color3(1, 1, 0);
+        boostMesh.scaling = new BABYLON.Vector3(5, 5, 5);
+        boostMesh.setEnabled(false);
+      function boostAt(xFn, zFn, t) {
+      var newBoost = boostMesh.clone('boost');
+        newBoost.position = new BABYLON.Vector3(xFn(t), 3.2, zFn(t));
+        newBoost.setEnabled(true);
+        boosts.push(newBoost);
+      }
 
+      // Place boosts here
+        boostAt(xFn, zFn, 0.05);
+
+      scene.registerAfterRender(function() {
+      boosts.forEach(function(boost, i){
+    if(boost.intersectsMesh(playerSphere)){
+      boost.dispose();
+      boosts.splice(i,1);
+    var vel = playerSphere.physicsImpostor.getLinearVelocity();
+      playerSphere.applyImpulse(vel.normalize().scale(100), playerSphere.getAbsolutePosition());
+    } else {
+    boost.rotation.y += 0.01
+    }
+    });
+  });
+}); 
     var camera = new BABYLON.ArcRotateCamera("Camera", 0, (3 * Math.PI) / 8, 20, playerSphere, scene);
 
         camera.attachControl(canvas, true);
@@ -85,6 +120,9 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
         wallAt(xFn, zFn, 0.06,  6.1, scene);
         /* OTHER wallAt Code here However many they want*/
 
+        var startTime;
+        var timer = document.querySelector('#timer'); 
+
         scene.registerAfterRender(function() {
           var vel = playerSphere.physicsImpostor.getLinearVelocity();
           playerSphere.physicsImpostor.setLinearVelocity(vel.scale(.98));
@@ -100,6 +138,7 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
           var  right = BABYLON.Vector3.TransformCoordinates(forward, BABYLON.Matrix.RotationY(Math.PI / 2));
 
           if (keys.w) {
+          if(!startTime){ startTime = Date.now(); } 
             playerSphere.applyImpulse(forward, playerSphere.getAbsolutePosition());
           }
           if (keys.s) {
@@ -117,7 +156,9 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
             l = true;
             lost();
           }
-
+          if(startTime) {
+          timer.innerHTML = ((Date.now() - startTime) / 1000).toFixed(2).replace('.',':');
+          } 
           var currentT = tLookup(xFn, zFn, 500, playerSphere.position.x, playerSphere.position.z);
 //NEW CODE
           var angle = (derivAngle(currentT, xFn, zFn) - (Math.PI));
@@ -176,7 +217,7 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
 
       function rampAt(xFn, zFn, t, angle, scene) {
         var ramp = BABYLON.MeshBuilder.CreateBox('ramp', {
-          height: 8,
+          height: 10,
           width: .25,
           depth: 12
         }, scene);
@@ -224,5 +265,5 @@ var _yFn = function(t) {var fns = [function(t) {return (Math.pow((1-t),3)*0.2)+(
 </head>
 <body onload="start()">
   <canvas id="renderCanvas"></canvas>
-</body>
+  <div id="timer">00:00</div> 
 </html>
